syntax = "proto3";

package nix_eval_server;

service NixEvalServer {
    rpc GetAttributes (GetAttributesRequest) returns (GetAttributesResponse) {}
    rpc LockFlake (LockFlakeRequest) returns (LockFlakeResponse) {}
}

message GetAttributesRequest {
    string expression = 1;
}

message GetAttributesResponse {
    repeated string attributes = 1;
}

message LockFlakeRequest {
    string expression = 1;
    optional string old_lock_file = 2;
}

message LockFlakeResponse {
    string lock_file = 1;
}

